
  [ Helmut Grohne ]
  * Fix FTCBFS: Pass QT_HOST_PATH. (Closes: #1023054)
    + cross.patch: Honour PKG_CONFIG_EXECUTABLE
    + cross.patch: Allow building android tools
    + Pass QT_HOST_* variables to build.
    + Depend on a native qt toolchain for the former.
    + Do build tools even when cross building.
    + Add excess files to debian/not-installed.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 21 Jan 2023 13:42:21 +0100

qt6-base (6.4.2+dfsg~rc1-3) unstable; urgency=medium

  [ Patrick Franz ]
  * Upload to unstable.

 -- Patrick Franz <deltaone@debian.org>  Fri, 30 Dec 2022 16:58:05 +0100

qt6-base (6.4.2+dfsg~rc1-2) experimental; urgency=medium

  [ Patrick Franz ]
  * Update symbols from buildlogs.

 -- Patrick Franz <deltaone@debian.org>  Wed, 28 Dec 2022 14:19:02 +0100

qt6-base (6.4.2+dfsg~rc1-1) experimental; urgency=medium

  [ Patrick Franz ]
  * Enable link time optimization (Closes: #1015617).
  * Update ABI to 6.4.2.
  * Update excluded files from tarball.
  * Bump Standards-Version to 4.6.2 (no changes needed).

 -- Patrick Franz <deltaone@debian.org>  Tue, 27 Dec 2022 22:26:09 +0100

qt6-base (6.4.1+dfsg-1) experimental; urgency=medium

  [ Patrick Franz ]
  * Make cmake a suggestion of qt6-base-dev-tools instead of a hard
    dependency (Closes: #1019870).
  * New upstream release (6.4.1).
  * Update ABI to 6.4.1.
  * Update symbols from buildlogs.

 -- Patrick Franz <deltaone@debian.org>  Tue, 15 Nov 2022 18:30:46 +0100

qt6-base (6.4.0+dfsg-5) experimental; urgency=medium

  * Team upload.
  * Update symbols files from the logs of buildds.

 -- Pino Toscano <pino@debian.org>  Sun, 16 Oct 2022 18:06:33 +0200

qt6-base (6.4.0+dfsg-4) experimental; urgency=medium

  * Team upload.
  * Backport upstream commit e81cba0cd33339c2e5f5e3c670741605264b21c2 to support
    HPPA; patch upstream_Add-HPPA-detection.patch. (Closes: #1021404)
  * Backport upstream commit ac17a394a5701174c705050640e26c9cb95d289b to support